# Generative_Model_Zoo

./: .dockerignore  .gitignore  Dockerfile  eval.py  hydra_wrapper.py  loss.py  pyproject.toml  readme.md  requirement.txt  train.py  train_hydra.py  utils.py
conf/: train.yaml
conf/loss/: ae.yaml  diffusion.yaml  diffusion_gan.yaml  lsgan.yaml  vae.yaml
conf/model/: g.yaml  g_d.yaml  size_32_g_d.yaml
conf/optimizer/: big-gan.yaml  diffusion.yaml  style-gan-v3.yaml
config/: eval.yaml  train.yaml
config/loss/: ae.yaml  lsgan.yaml
config/model/: size_32_g.yaml  size_32_g_b.yaml  size_32_g_q_b.yaml
config/noise_scheduler/: diffusion.yaml  fm.yaml
config/optimizer/: diffusion.yaml  style-gan.yaml
src/: data.py  eval.py  lr_scheduler.py  model.py  model_vqvae.py  noise_scheduler.py  solver.py  train.py  utils.py
